--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mdx-js/react": "^1.6.22",
     "@theme-ui/presets": "^0.13.1",
     "body-parser": "^1.19.1",
     "dotenv-load": "^2.0.0",
@@ -15,5 +18,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   }
 }
